[tool.poetry]
authors = ["Gradient developers"]
description = ""
name = "gradient-sdk-python-example"
packages = [{include = "gradient_sdk_python_example"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
gradientai = "^1.2.0"
python = "^3.8.1"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
mypy = "1.3.0"

[tool.poetry.scripts]
blocks = "gradient_sdk_python_example.blocks:main"
embeddings = "gradient_sdk_python_example.embeddings:main"
fine_tune = "gradient_sdk_python_example.fine_tune:main"
guidance = "gradient_sdk_python_example.guidance:main"
rag = "gradient_sdk_python_example.rag:main"

[tool.black]
black = "22.3.0"
line-length = 80

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

